--- a/style/component/_public-profile.scss
+++ b/style/component/_public-profile.scss
@@ -9,6 +9,7 @@
     padding: 35px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     margin-top: 30px;
     .atbd_author_avatar {
