--- a/style/style.scss
+++ b/style/style.scss
@@ -34,10 +34,16 @@
       padding: 20px 20px 15px;
     }
   }
+  .atbd_content_active #directorist.atbd_wrapper .atbdp_column {
+    width: 33.3333% !important;
+  }
+
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-
+  .atbd_content_active #directorist.atbd_wrapper .atbdp_column {
+    width: 50% !important;
+  }
 }
 
 @media (max-width: 991px) {
@@ -53,5 +59,25 @@
     .atbd_listing_details .atbd_area_title {
       margin-bottom: 15px;
     }
+  }
+  .atbd_content_active #directorist.atbd_wrapper .atbdp_column {
+    width: 100% !important;
+  }
+  .atbd_content_active #directorist.atbd_wrapper .atbd_auhor_profile_area .atbd_author_meta{
+    width: 100%;
+    justify-content: center;
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  .atbd_content_active #directorist.atbd_wrapper .atbd_auhor_profile_area .atbd_author_avatar{
+    flex-wrap: wrap;
+    img{
+      margin-right: 15px;
+    }
+  }
+  .atbd_content_active #directorist.atbd_wrapper .atbd_auhor_profile_area .atbd_author_avatar .atbd_auth_nd{
+    margin-left: 0;
   }
 }
